--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,11 @@
     padding: 20px;    
 }
 
+.boxContainer {
+    border: 2px solid grey;
+    padding: 20px; 
+}
+
 .upperSection {
     margin: auto;
     width: 50%;
